--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 .spinnerImg {
     position: absolute;
-    width: 5vh;
+    width: 5vw;
 }
 
 section {
@@ -38,8 +38,14 @@ section {
     position: relative;
 }
 
+button {
+    user-select: none;
+}
+
 .gameStartScene {
     position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -51,23 +57,17 @@ section {
     transition: opacity .3s;
 }
 
-.gameStartSceneAnim {
-    opacity: 0;
-}
-
 .gameStartScene button {
-    padding: .25rem 1.5rem;
-}
-
-.gameStartScene button {
-    font-size: 1.5vw;
+    padding: .2vw 1.75vw;
+    font-size: clamp(clamp(2px, 1vw, 26px), 1.5vw, 1.5vw);
+    border: .15vw solid black;
 }
 
 .closeModal {
     background-color: rgba(0, 0, 0, .85);
     color: white;
     font-size: 1.5vw;
-    padding: 5vh;
+    padding: 7vw;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -79,40 +79,75 @@ section {
     transform: translate(-50%, -50%);
     opacity: 1;
     transition: opacity .3s;
-    font-size: 3vh;
 }
 
 .closeModal div {
     display: flex;
-    gap: 3rem;
+    gap: 3vw;
 }
 
 .closeModal div button {
     padding: .25vw 2vw;
-}
-
-.closeModalAnim {
-    opacity: 0;
+    border: .05vw solid white;
 }
 
 .settingsScene {
     width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, .95);
+    height: 100%;
+    background-color: rgba(0, 0, 0, .975);
     color: white;
-    font-size: 1.5rem;
-    padding: 5rem;
+    font-size: 1.5vw;
+    padding: 5vw;
     position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    gap: 1vw;
     opacity: 1;
     transition: opacity .3s;
+}
+
+.settingsScene input[type="range"] {
+    width: 12.5vw;
+    height: 1.5vw;
+
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+        & {
+            overflow: hidden;
+            height: 1.5vw;
+            appearance: none;
+            background-color: #ddd;
+            border-radius: 10vw;
+        }
+
+        &::-webkit-slider-runnable-track {
+            height: 100%;
+            -webkit-appearance: none;
+            transition: box-shadow 0.2s ease-in-out;
+        }
+
+        &::-webkit-slider-thumb {
+            width: 1.5vw;
+            -webkit-appearance: none;
+            height: 100%;
+            cursor: ew-resize;
+            background: #fff;
+            box-shadow: -51vw 0 0 50vw #1597ff, inset 0 0 0 2.5vw #1597ff;
+            transition: box-shadow 0.2s ease-in-out;
+            border-radius: 50%;
+            position: relative;
+            color: black;
+            border: .2vw solid black;
+        }
+
+        &:active::-webkit-slider-thumb {
+            background: #fff;
+            box-shadow: -51vw 0 0 50vw #1597ff, inset 0 0 0 0 #1597ff;
+        }
+    }
 }
 
 .settingsScene button:nth-child(3) {
@@ -122,47 +157,90 @@ section {
     padding: 0;
     margin: 0;
     position: absolute;
-    right: 1em;
-    top: 1rem;
+    right: 1vw;
+    top: 1vw;
 }
 
-.settingsScene button:last-child {
+.settingsScene button.language {
     background-color: transparent;
     border: none;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: .5vw;
     padding: 0;
     margin: 0;
     position: absolute;
-    top: 1rem;
-    left: 1rem;
+    top: 1vw;
+    left: 1vw;
+    transition: top .3s;
 }
 
-.settingsScene button:last-child img {
-    width: 40px;
-    height: 40px;
+.settingsScene button.language img {
+    width: 4vw;
+    height: 4vw;
     object-fit: cover;
+    position: absolute;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.settingsScene button.language {
+    z-index: 1;
+}
+
+.settingsScene button.language.activeLanguage {
+    z-index: 2;
 }
 
 .settingsScene button span {
     display: block;
-    width: 2.5rem;
-    height: 2px;
+    width: 2.5vw;
+    height: .02vw;
     background-color: white;
-    margin: .5rem;
+    margin: .5vw;
 }
 
 .settingsScene button span:first-child {
-    transform: rotate(45deg) translateX(7px);
+    transform: rotate(45deg) translateX(.35vw);
 }
 
 .settingsScene button span:last-child {
-    transform: rotate(-45deg) translateX(6px);
+    transform: rotate(-45deg) translateX(.35vw);
 }
 
-.settingsSceneAnim {
-    opacity: 0;
+.playerSureModal {
+    width: 70vw;
+    height: 50%;
+    background-color: rgba(0, 0, 0, .85);
+    color: white;
+    font-size: 1.5vw;
+    padding: 4vw 6vw;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.playerSureModal div {
+    display: flex;
+    gap: 2vw;
+}
+
+.playerSureModal button:first-child {
+    padding: .1vw 1vw;
+    border: .1vw solid red;
+}
+
+.playerSureModal button:last-child {
+    padding: .1vw 1vw;
+    border: .1vw solid green;
 }
 
 .hardLevel {
@@ -192,10 +270,6 @@ section {
     border: .5px solid rgba(255, 255, 255, .7);
 }
 
-.hardLevelAnim {
-    opacity: 0;
-}
-
 .cards {
     display: flex;
     align-items: center;
@@ -204,6 +278,8 @@ section {
     position: relative;
     width: 100vw;
     height: 100%;
+    user-select: none;
+    overflow: hidden;
 }
 
 .cards .custom-card-div {
@@ -212,30 +288,27 @@ section {
     transition: transform .75s, left .75s, top .75s, right .75s, bottom .75s;
 }
 
-/* .cards .custom-card-div.custom-card-div-anim {
-    top: 77.75% !important;
-    left: 5vw !important;
-    transform: rotateZ(90deg) !important;
-} */
-
 .cards .custom-card {
     position: relative;
     display: block;
     background-color: transparent;
-    width: 7.5vw;
+    width: 6.25vw;
     height: 100%;
 }
 
 .cards .custom-card .card-front {
     text-align: center;
-    border: 1px solid black;
+    border: .1vw solid black;
     background: linear-gradient(to right, #ff5f6d, #ffc371);
-    border-radius: 1rem;
+    border-radius: 7.5%;
     perspective: 1000px;
     transform: rotateY(0);
+    position: relative;
 }
 
 .cards .custom-card>div {
+    width: 100%;
+    height: 100%;
     transition: transform 1s, opacity .25s .25s;
 }
 
@@ -244,14 +317,9 @@ section {
     top: 0;
     background-color: red;
     opacity: 0;
-    border-radius: 1rem;
+    border: .1vw solid black;
+    border-radius: 7.5%;
     transform: rotateY(0);
-}
-
-.cards .custom-card>div,
-.cards .custom-card>div {
-    width: 100%;
-    height: 100%;
 }
 
 .cards .card-back.card-back-anim {
@@ -264,47 +332,52 @@ section {
     opacity: 0;
 }
 
-.cards .custom-card>div>div:first-child {
+.cards .custom-card>.card-front>div:first-child {
     position: absolute;
     top: 0;
     left: 0;
-    margin-top: -.4rem;
 }
 
-.cards .custom-card>div>div:nth-child(2) {
+.cards .custom-card>.card-front>div:nth-child(2) {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.cards .custom-card>div>div:last-child {
+.cards .custom-card>.card-front>div:last-child {
     position: absolute;
     bottom: 0;
     right: 0;
     transform: rotateZ(180deg);
-    margin-bottom: -.4rem;
 }
 
 .cards .custom-card .cardDesing div span {
     display: block;
-    width: 1vw;
-    height: 1vw;
+    width: .9vw;
+    height: .9vw;
 }
 
 .cards .custom-card .cardDesing.midCardDesing div span {
     display: block;
-    width: 1.25vw;
-    height: 1.25vw;
+    width: 1.15vw;
+    height: 1.15vw;
 }
 
 .cards .custom-card .cardDesing div {
     display: flex;
 }
 
+.cards .custom-card .cardDesing:not(.midCardDesing) {
+    position: absolute;
+    top: 2.5vw;
+}
+
 .cards .custom-card .cardNumber {
+    position: absolute;
     font-size: 2vw;
     font-weight: 400;
+    margin-left: .1vw;
 }
 
 .gameScene {
@@ -314,23 +387,19 @@ section {
     transition: opacity .3s;
 }
 
-.gameSceneAnim {
-    opacity: 0;
-}
-
 .levelModal {
     width: 100vw;
     height: 100vh;
     background-color: black;
     color: white;
-    font-size: 1.5rem;
-    padding: 5rem;
+    font-size: 2vw;
+    padding: 5vw;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 1vw;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -339,29 +408,79 @@ section {
 }
 
 .levelModal button {
-    padding: 1vh 4vh;
-}
-
-.levelModalAnim {
-    opacity: 0;
+    padding: 1vw 4vw;
+    border: .25vw solid grey;
 }
 
 .cantClickable {
     color: white;
-    font-size: 1.5rem;
-    padding: 2rem 5rem;
+    font-size: 2vw;
+    padding: 4vw 10vw;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    right: 1rem;
-    top: 1rem;
+    gap: 1vw;
+    right: 1.5vw;
+    top: 1.5vw;
     opacity: 1;
     transition: opacity .25s;
 }
 
-.cantClickableAnim {
+.LevelEndModal {
+    width: 70vw;
+    height: 60%;
+    background-color: rgba(0, 0, 0, .85);
+    color: white;
+    font-size: clamp(12px, 2vw, 20px);
+    padding: 4vw 6vw;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.LevelEndModal div {
+    max-width: 70%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5vw;
+}
+
+.gameEndModal {
+    background-color: rgba(0, 0, 0, .95);
+    color: white;
+    font-size: 1.5vw;
+    padding: 5vh;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1vw;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.gameEndModal button {
+    border: .1vw solid black;
+    padding: .1vw 1vw;
+}
+
+.modalOrSceneAnim {
     opacity: 0;
 }
